WDBC - Section 5: Corrected the problem of floated skill images overflow outside the containing block.

--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,10 @@ hr {
   width: 25%;
 }
 
+.clearfix {
+  clear: both;
+}
+
 .contact-btn {
   background-color: #0DBAC1;
   border: 1px solid #0DBAC1;
